--- a/modules/components/src/Input/Input.css
+++ b/modules/components/src/Input/Input.css
@@ -1,10 +1,16 @@
 .inputWrapper {
-  border: solid 2px lightgrey;
-  padding: 5px;
+  border: solid 1px #707070;
+  border-radius: 6px;
+  padding: 4px 4px 4px 8px;
 }
 
-.inputWrapper.focused {
-  box-shadow: 0px 0px 10px skyblue;
+.inputWrapper input {
+  color: #595959;
+}
+
+.inputWrapper input::placeholder {
+  font-style: italic;
+  color: #818181;
 }
 
 .inputWrapper input:focus {
