--- a/modules/components/src/Input/Input.css
+++ b/modules/components/src/Input/Input.css
@@ -1,3 +1,5 @@
+@import '../../public/themeStyles/constants.css';
+
 .inputWrapper {
   border: solid 1px #707070;
   border-radius: 6px;
@@ -5,12 +7,12 @@
 }
 
 .inputWrapper input {
-  color: #595959;
+  color: var(--font-color-primary);
 }
 
 .inputWrapper input::placeholder {
   font-style: italic;
-  color: #818181;
+  color: var(--font-color-light);
 }
 
 .inputWrapper input:focus {
