--- a/modules/components/src/DataTable/TableToolbar/Toolbar.css
+++ b/modules/components/src/DataTable/TableToolbar/Toolbar.css
@@ -5,6 +5,7 @@
   background: #fff;
   display: flex;
   flex: none;
+  border-top: 1px solid var(--background-color-1);
 }
 
 .tableToolbar__plugins {
