--- a/modules/components/src/Arranger/ArrangerHeader.css
+++ b/modules/components/src/Arranger/ArrangerHeader.css
@@ -26,7 +26,7 @@
   margin: 0;
   padding: 2px;
   border-radius: 6px;
-  border: 1px solid #a5b0b6;
+  border: 1px solid #d9d9d9;
   color: var(--font-color-primary);
 }
 
@@ -37,6 +37,7 @@
   padding: 4px 16px 4px 12px;
   font-size: 14px;
   cursor: pointer;
+  user-select: none;
 }
 .filter-zone__number {
   font-size: 16px;
