--- a/modules/components/src/Arranger/ArrangerHeader.css
+++ b/modules/components/src/Arranger/ArrangerHeader.css
@@ -4,6 +4,9 @@
   display: flex;
   justify-content: space-between;
   padding: 4px 16px;
+  background-color: white;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .arranger-header__title {
@@ -34,7 +37,7 @@
   display: flex;
   align-items: center;
   border-radius: 6px;
-  padding: 4px 16px 4px 12px;
+  padding: 2px 25px 2px 20px;
   font-size: 14px;
   cursor: pointer;
   user-select: none;
