--- a/modules/components/public/themeStyles/beagle/beagle.css
+++ b/modules/components/public/themeStyles/beagle/beagle.css
@@ -209,8 +209,8 @@ body {
   flex: 1 1 100%;
   display: flex;
   align-items: center;
-  margin-top: 4px;
-  padding-left: 8px;
+  padding: 6px 17px 4px;
+  border-top: 1px solid var(--background-color-1);
 }
 .facetFilters-empty {
   display: none;
