--- a/modules/components/src/Arranger/ArrangerHeader.css
+++ b/modules/components/src/Arranger/ArrangerHeader.css
@@ -3,7 +3,7 @@
 .arranger-header {
   display: flex;
   justify-content: space-between;
-  padding: 4px 20px;
+  padding: 4px 16px 4px 20px;
   background-color: white;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
