--- a/modules/components/src/DataTable/TableToolbar/Toolbar.css
+++ b/modules/components/src/DataTable/TableToolbar/Toolbar.css
@@ -1,7 +1,7 @@
 @import '../../../public/themeStyles/constants.css';
 
 .tableToolbar {
-  padding: 4px 16px 2px 10px;
+  padding-top: 4px;
   background: #fff;
   display: flex;
   justify-content: space-between;
@@ -12,6 +12,8 @@
 
 .tableToolbar__plugins {
   flex-grow: 1;
+  padding-bottom: 6px;
+  padding-left: 10px;
 }
 /* .tableToolbar_plugins--active-filters {
   flex-grow: unset;
@@ -31,6 +33,12 @@
 
 .tableToolbar .inputWrapper {
   border: none;
+}
+
+.tableToolbar .tableToolbar__page-count-filter {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 16px 6px 18px;
 }
 
 .tableToolbar .tableToolbar__filter {
