move portal ver of filter bar to its own component for publishing purposes

--- a/modules/components/src/DataTable/TableToolbar/Toolbar.css
+++ b/modules/components/src/DataTable/TableToolbar/Toolbar.css
@@ -89,3 +89,66 @@
 .tableToolbar__filter {
   display: flex;
 }
+
+/* Facet Filter Styles */
+.facetFilters {
+  flex: 1 1 100%;
+  display: flex;
+  align-items: center;
+  padding: 6px 17px 4px;
+  border-top: 1px solid var(--background-color-1);
+}
+.facetFilters-empty {
+  display: none;
+}
+.filter-bubble {
+  display: flex;
+  align-items: center;
+  height: 22px;
+  border-radius: 10.5px;
+  font-size: 11px;
+  font-weight: 300;
+  letter-spacing: 0.2px;
+  margin-right: 10px;
+  flex: none;
+}
+.filter-group {
+  display: flex;
+  flex-wrap: wrap;
+}
+.filter-value {
+  color: #595959;
+  border-radius: 2px;
+  background-color: #edf1f4;
+  padding: 0 7px 0 12px;
+  margin-right: 4px;
+  margin-bottom: 4px;
+  cursor: pointer;
+}
+.filter-value::after {
+  content: url(data:image/svg+xml,%3Csvg%20width%3D%228%22%20height%3D%228%22%20stroke%3D%22%23595959%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%0A%20%20%3Cline%20x1%3D%220%22%20y1%3D%220%22%20x2%3D%228%22%20y2%3D%228%22%20/%3E%0A%20%20%3Cline%20x1%3D%228%22%20y1%3D%220%22%20x2%3D%220%22%20y2%3D%228%22%20/%3E%0A%3C/svg%3E);
+  margin-left: 9px;
+}
+.filter-field {
+  font-size: 12px;
+  font-weight: 600;
+  color: #595959;
+  text-transform: uppercase;
+  margin-right: 0.3rem;
+}
+.filter-more,
+.filter-less {
+  padding: 0 12px;
+  color: #fff;
+  background-color: #ffffff;
+  color: #008199;
+  border: solid 1px #cacbcf;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-right: 6px;
+}
+.filter-op {
+  font-weight: normal;
+  color: #74757d;
+  margin-right: 5px;
+}
