temporarily remove css variables as the root name space is conflicting with tenant themes in portal

--- a/modules/components/public/themeStyles/constants.css
+++ b/modules/components/public/themeStyles/constants.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary-color-1: #003262;
   --primary-color-2: #4a8500;
   --primary-color-3: #850000;
@@ -31,4 +31,4 @@
   --font-color-dark: #222222;
   --font-color-light: #818181;
   --font-color-lightest: #c3c6c8;
-}
+} */
