--- a/modules/components/src/Arranger/ArrangerContext.css
+++ b/modules/components/src/Arranger/ArrangerContext.css
@@ -1,4 +1,4 @@
-/* :root {
+.arranger-context {
   --primary-color-1: #003262;
   --primary-color-2: #4a8500;
   --primary-color-3: #850000;
@@ -31,6 +31,4 @@
   --font-color-dark: #222222;
   --font-color-light: #818181;
   --font-color-lightest: #c3c6c8;
-} */
-
-/*** These css variables are now defined in ArrangerContext.css to prevent namespace collision with the Portal App. This file is simply here to serve as a reference ***/
+}
